syntax = "proto3";

option csharp_namespace = "RoomticaGrpcServiceBackEnd";

package estacionamiento;

import "google/protobuf/empty.proto";

service EstacionamientoService {
    rpc GetAll(google.protobuf.Empty) returns (Estacionamientos);
    rpc GetById(EstacionamientoId) returns (Estacionamiento);
    rpc Create(Estacionamiento) returns (Estacionamiento);
    rpc Update(Estacionamiento) returns (Estacionamiento);
    rpc Delete(EstacionamientoId) returns (google.protobuf.Empty);
}

message Estacionamiento {
    int32 id = 1;
    string lugar = 2;
    string largo = 3;
    string alto = 4;
    string ancho = 5;
    int32 id_tipo_estacionamiento = 6;
    bool estado = 7;
}

message Estacionamientos {
    repeated Estacionamiento estacionamientos = 1;
}

message EstacionamientoId {
    int32 id = 1;
}
